[package]
name = "dl"
version = "0.1.0"
edition = "2021"

[dependencies]
content_disposition = "0.4.0"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
